Closed Bug 1071134 Opened 11 years ago Closed 11 years ago

Fix command line help for updater

Categories

(Toolkit :: Application Update, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35
Tracking Status
firefox34 --- fixed
firefox35 --- fixed

People

(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)

References

()

Details

Attachments

(1 file, 1 obsolete file)

For Mac v2 signing an additional command line param was added. Now it should be fprintf(stderr, "Usage: updater patch-dir install-dir apply-to-dir [wait-pid [callback-working-dir callback-path args...]]\n"); This bug will fix that and the documentation
Attached patch pach rev1 (obsolete) — Splinter Review
Attachment #8493250 - Flags: review?(spohl.mozilla.bugs)
Comment on attachment 8493250 [details] [diff] [review] pach rev1 Review of attachment 8493250 [details] [diff] [review]: ----------------------------------------------------------------- ::: toolkit/mozapps/update/updater/updater.cpp @@ +2227,5 @@ > InitProgressUI(&argc, &argv); > > // To process an update the updater command line must at a minimum have the > + // directory path containing the updater.mar file to process as the first > + // argument the install directory as the second argument, and the directory to nit: a comma after "[...] updater.mar file to process as the first argument" might help readability.
Attachment #8493250 - Flags: review?(spohl.mozilla.bugs) → review+
Attachment #8493250 - Attachment is obsolete: true
Attachment #8493260 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Landed on aurora in the Mac V2 signing combined patch in bug 1047584
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: