Mac v2 signing - Bug 1071134 - Fix command line help for updater. r=spohl